# mozaic

./: Cargo.toml  rustfmt.toml
kompozit/: Cargo.toml
kompozit-core/: Cargo.toml
kompozit-core/src/: lib.rs
kompozit-macros/: Cargo.toml
kompozit-macros/src/: id.rs  lib.rs  patcher.rs  scope.rs  selection.rs
kompozit-macros/src/composable/: id.rs  mod.rs  patcher.rs  scope.rs  selection.rs
kompozit/examples/: foo.rs
kompozit/src/: lib.rs
