[package]
name = "kompozit-macros"
description = ""
keywords = []
categories = []
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[lib]
proc-macro=true

[dependencies]
syn = { version = "2.0.101", features = ["full", "fold", "visit", "visit-mut", "parsing", "printing", "extra-traits"] }
quote = "1.0.40"
proc-macro2 = { version = "1.0.95", features = ["proc-macro"] }
proc-macro-error = "1.0.4"
heck = "0.5.0"
itertools = "0.14.0"

[lints]
workspace = true
